--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
+    "buffer": "^6.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.10.1",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.23.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.8",
     "cors-anywhere": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
